# rfx-hunch

./: .env  .gitignore  Common.mk  Kconfig  README.md  configure.ac
.examples/: Makefile.am
conf/: dk.sh
ext/: Makefile.am
src/Tprofile_read/: Dataset_QSH.py  Dummy_dsx3.py  Dummy_g1data.py  Hunch_lsplot.py  Makefile  Makefile.am  create_db_1.py
src/Tprofile_read/docker/: Dockerfile
src/Tprofile_read/docker_v1/: Dockerfile
src/Tprofile_read/jpnb/: DB_create_shuffle.ipynb  LS.html  STEP1 with reconstruction.ipynb  STEP1.ipynb  STEP11 - Compose QSH.ipynb  STEP12 - Compose QSH Reconstruction.ipynb  STEP12.7-Param_to_SXR_LS_Br-rs-rm.ipynb  STEP12_7-Param_to_SXR_LS_BrBt_rm-REMOVE_NS.ipynb  STEP12_7-Param_to_SXR_LS_BrBt_rm.ipynb  STEP13 _ fixed VAE parameters.ipynb  STEP14 - Test Relevance - Disentangle meter.ipynb  STEP14 - Test Relevance - Sparsity.ipynb  STEP14 - Test Relevance - beta.ipynb  STEP14 - Test Relevance.ipynb  STEP15 - kmeans regularizer.ipynb  STEP2.ipynb  STEP3 - Test on QSH.ipynb  STEP3_missing_simulated_data.ipynb  STEP5  QSH-trajectory on VAE2 latent space.ipynb  STEP5 beta regularization QSH.ipynb  STEP5_VAE2_disentangled_decoder.kcp.data-00000-of-00001  STEP5_VAE2_disentangled_decoder.kcp.index  STEP5_VAE2_disentangled_encoder.kcp.data-00000-of-00001  STEP5_VAE2_disentangled_encoder.kcp.index  STEP6  KL trend shape.ipynb  STEP6 test beta for analytical vs montecarlo KL.ipynb  STEP6.5 test beta for analytical KL term.ipynb  STEP7  CLEAN DATABASE and convolution.ipynb  STEP7.1 RECOSNTRUCTION_SXR.ipynb  check DB.ipynb  lsplot.ipynb  sneplot.ipynb  step12_7_thesis_BrBt_decoder.kcp.index  step12_7_thesis_BrBt_encoder.kcp.index  step12_7_thesis_decoder.kcp.index  step12_7_thesis_encoder.kcp.index
src/Tprofile_read/jpnb/DoWhy/: Test_install.ipynb
src/Tprofile_read/jpnb/Export/: Export_model.ipynb
src/Tprofile_read/jpnb/tests/: Relevance on Modes VAE reconstruction.ipynb  STEP12_VAE_modes_reconstruction.json  STEP12_VAE_modes_reconstruction.p  Test_MDSplus_data.ipynb
src/Tprofile_read/jpnb/torch/: VAE_example-BIN.ipynb  VAE_example.ipynb  VAE_example.py  brevitas example.ipynb  brevitas_example.py  super_resolution_with_onnxruntime.ipynb
src/Tprofile_read/logs/fit/beta_1.0_20190805-144732/validation/: events.out.tfevents.1565016465.044afd495908.18675.5736.v2
src/Tprofile_read/models/: AEFIT3.py  AEFIT5.py  AEFIT6.py  AEFIT7.py  AEFIT8.py  CAEFIT.py  GAN3.py  base.py  layers.py
src/Tprofile_read/models/torch/: VAE.py  common.py
